@@ -12,6 +12,7 @@
         android:layout_weight="30"
         android:layout_width="fill_parent"
         android:layout_height="0dip"
-        custom:distribution="1"
+        custom:distribution="2"
         />
+    <!-- distribution 2 == basic horizontal panel -->
 </LinearLayout>
